<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_Wejscia_IO" Id="{c5bacf57-10f0-470d-b016-b9f432921dc7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'global_init_slot' := '40501'}
VAR_GLOBAL
//Przyciski	
	
//czujniki siłownika ciecia 1
	bCzujnik0C1								: FB_Czujnik_NO;
	bCzujnikMaxC1							: FB_Czujnik_NO;
//czujniki siłownika ciecia 2
	bCzujnik0C2								: FB_Czujnik_NO;
	bCzujnikMaxC2							: FB_Czujnik_NO;
//czujniki przesuwacza wafla
	bCzujnik0PW_Z							: FB_Czujnik_NO;
	bCzujnikMaxPW_Z							: FB_Czujnik_NO;
	bCzujnik0PW_N							: FB_Czujnik_NO;
	bCzujnikMaxPW_N							: FB_Czujnik_NO;
//czujnik waflae
	bWafelNaWejsciu							: FB_Czujnik_NO;
	bWafelDoCiecia1							: FB_Czujnik_NO;
	bWafelDoCiecia2							: FB_Czujnik_NO;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>